# bare-llama.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.md  binding.c  binding.cpp  binding.js  example.js  index.js  package-lock.json  package.json
.github/workflows/: prebuild.yml  publish.yml  test.yml
bench/: embeddings.js  generation.js  run.js
examples/: basic.js  embedding-benchmark.js  embedding.js  json-schema.js  lark-constrained-output.js  lowlevel.js  ollama-models.js  regression-test.js  test-config.js  test-double-free-crash.js  test-double-free-proof.js  test-double-free.js  text-generation.js  tool-use-agent.js
lib/: ollama-models.js  ollama.js
prebuilds/lib/cmake/ggml/: ggml-config.cmake
prebuilds/lib/cmake/llama/: llama-config.cmake  llama-version.cmake
prebuilds/lib/pkgconfig/: llama.pc
src/: agent.js
test/: constraints.js  context.js  double-free.js  embeddings.js  generate.js  gguf.js  helpers.js  model.js  rerank.js  sampler.js
tools/: ollama-hyperdrive.js
